--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
  <script src="https://sdk.inbenta.io/chatbot/1/inbenta-chatbot-sdk.js"></script>
 </head>
 <body >
+<h1>Ejemplo Chat Inbenta.</h1>
+<h2>Esta es una prueba de selección</h2>
 </body>
 </html>
 <script>
